--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".activity.HomeActivity">
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -51,7 +50,9 @@
             android:textSize="@dimen/_10sdp"
             app:tabBackground="@color/colorPrimary"
             app:tabGravity="fill"
+            app:tabIndicator="@drawable/tab_indicator"
             app:tabIndicatorColor="@color/colorAccent"
+            app:tabIndicatorFullWidth="false"
             app:tabMaxWidth="0dp"
             app:tabMode="fixed"
             app:tabPaddingEnd="0dp"
@@ -65,8 +66,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
     </LinearLayout>
-
-
 
     <FrameLayout
         android:id="@+id/play_screen_frame_layout"
