--- a/app/src/main/res/layout/activity_playlist_songs.xml
+++ b/app/src/main/res/layout/activity_playlist_songs.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
-    tools:context=".activity.HomeActivity">
+    android:background="@color/colorPrimary">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,21 +18,20 @@
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
-            <androidx.appcompat.widget.AppCompatImageView
+            <ImageView
                 android:id="@+id/imageViewBack"
                 android:layout_width="@dimen/_45sdp"
-                android:layout_height="@dimen/_45sdp"
-                android:padding="@dimen/_10sdp"
-                android:src="@drawable/ic_back" />
+                android:layout_height="@dimen/_30sdp"
+                android:src="@drawable/ic_arrow_back" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/txt_title"
                 style="@style/txt_white_style"
                 android:layout_width="match_parent"
                 android:fontFamily="@font/roboto_bold"
-                android:text="Play love me a lot"
                 android:textColor="@color/white"
-                android:textSize="@dimen/_14sdp" />
+                android:textSize="@dimen/_14sdp"
+                tools:text="Play love me a lot" />
 
         </LinearLayout>
 
@@ -78,7 +76,7 @@
                             style="@style/txt_white_style"
                             android:layout_width="match_parent"
                             android:fontFamily="@font/roboto_medium"
-                            android:text="Play All"
+                            android:text="@string/txt_playAll"
                             android:textColor="@color/white"
                             android:textSize="@dimen/_11sdp" />
 
@@ -97,11 +95,13 @@
                             android:id="@+id/txt_sort"
                             style="@style/txt_white_style"
                             android:layout_width="wrap_content"
+                            android:layout_gravity="center_vertical"
                             android:layout_marginEnd="@dimen/_10sdp"
-                            android:drawableRight="@drawable/ic_dropdown"
-                            android:drawablePadding="@dimen/_7sdp"
+                            android:drawableRight="@drawable/selector_ic_dropdown"
+                            android:drawablePadding="@dimen/_5sdp"
                             android:fontFamily="@font/roboto_regular"
-                            android:text="Sort by name"
+                            android:gravity="center_vertical"
+                            android:text="@string/txt_sort_by_name"
                             android:textColor="@color/txt_offwhite"
                             android:textSize="@dimen/_11sdp" />
 
