--- a/app/src/main/res/layout/activity_scan_files.xml
+++ b/app/src/main/res/layout/activity_scan_files.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
-    tools:context=".activity.HomeActivity">
+    android:background="@color/colorPrimary">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -23,17 +21,17 @@
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/imageViewBack"
                 android:layout_width="@dimen/_45sdp"
-                android:layout_height="@dimen/_45sdp"
-                android:padding="@dimen/_10sdp"
-                android:src="@drawable/ic_back" />
+                android:layout_height="@dimen/_30sdp"
+                android:src="@drawable/ic_arrow_back" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/txt_title"
                 style="@style/txt_white_style"
                 android:layout_width="match_parent"
                 android:fontFamily="@font/roboto_bold"
-                android:text="Scan Files"
+                android:text="@string/txt_scanFiles"
                 android:textColor="@color/white"
+                android:textFontWeight="600"
                 android:textSize="@dimen/_14sdp" />
 
         </LinearLayout>
@@ -55,12 +53,14 @@
                 android:orientation="vertical">
 
                 <LinearLayout
+                    android:id="@+id/layout_listTopView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_marginTop="@dimen/_5sdp"
                     android:gravity="center_vertical"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    android:visibility="gone">
 
                     <LinearLayout
                         android:layout_width="0dp"
@@ -74,11 +74,13 @@
                             android:id="@+id/txt_sort"
                             style="@style/txt_white_style"
                             android:layout_width="wrap_content"
+                            android:layout_gravity="center_vertical"
                             android:layout_marginStart="@dimen/_10sdp"
-                            android:drawableRight="@drawable/ic_dropdown"
-                            android:drawablePadding="@dimen/_7sdp"
+                            android:drawableRight="@drawable/selector_ic_dropdown"
+                            android:drawablePadding="@dimen/_5sdp"
                             android:fontFamily="@font/roboto_regular"
-                            android:text="Sort by name"
+                            android:gravity="center_vertical"
+                            android:text="@string/txt_sort_by_name"
                             android:textColor="@color/txt_offwhite"
                             android:textSize="@dimen/_11sdp" />
                     </LinearLayout>
@@ -105,6 +107,7 @@
                             style="@style/checkBoxStyle"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:button="@drawable/cb_selector"
                             android:buttonTint="@color/checkbox_tint" />
 
                     </LinearLayout>
@@ -138,7 +141,7 @@
                     android:gravity="center"
                     android:padding="@dimen/_20sdp"
                     android:singleLine="false"
-                    android:text="@string/txt_no_data_found"
+                    android:text="@string/txt_no_songs_scan"
                     android:textColor="@color/offwhite"
                     android:textFontWeight="400"
                     android:visibility="gone" />
@@ -181,9 +184,5 @@
                 app:tailColor="@color/colorAccent" />
 
         </LinearLayout>
-
-
     </LinearLayout>
-
-
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
