--- a/app/src/main/res/layout/activity_search_playlist.xml
+++ b/app/src/main/res/layout/activity_search_playlist.xml
@@ -3,8 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimary"
-    tools:context=".activity.HomeActivity">
+    android:background="@color/colorPrimary">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -22,9 +21,8 @@
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/imageViewBack"
                 android:layout_width="@dimen/_45sdp"
-                android:layout_height="@dimen/_45sdp"
-                android:padding="@dimen/_10sdp"
-                android:src="@drawable/ic_back" />
+                android:layout_height="@dimen/_30sdp"
+                android:src="@drawable/ic_arrow_back" />
 
             <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/et_search"
@@ -32,7 +30,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/_5sdp"
                 android:background="@drawable/et_white_selector"
-                android:hint="Search"
+                android:hint="@string/txt_search"
                 android:paddingLeft="@dimen/_15sdp"
                 android:paddingTop="@dimen/_7sdp"
                 android:paddingRight="@dimen/_15sdp"
