--- a/app/src/main/res/layout/activity_search_songs.xml
+++ b/app/src/main/res/layout/activity_search_songs.xml
@@ -19,12 +19,12 @@
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
+
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/imageViewBack"
                 android:layout_width="@dimen/_45sdp"
-                android:layout_height="@dimen/_45sdp"
-                android:padding="@dimen/_10sdp"
-                android:src="@drawable/ic_back" />
+                android:layout_height="@dimen/_30sdp"
+                android:src="@drawable/ic_arrow_back" />
 
             <androidx.appcompat.widget.AppCompatEditText
                 android:id="@+id/et_search"
@@ -32,14 +32,17 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/_5sdp"
                 android:background="@drawable/et_white_selector"
-                android:hint="Search"
+                android:hint="@string/txt_search"
                 android:paddingLeft="@dimen/_15sdp"
                 android:paddingTop="@dimen/_7sdp"
                 android:paddingRight="@dimen/_15sdp"
                 android:paddingBottom="@dimen/_7sdp"
                 android:textColor="@color/txt_offwhite"
                 android:textColorHint="@color/txt_white35"
-                android:textSize="@dimen/_12sdp" />
+                android:textSize="@dimen/_12sdp">
+
+                <requestFocus />
+            </androidx.appcompat.widget.AppCompatEditText>
 
         </LinearLayout>
 
