--- a/app/src/main/res/layout/adapter_fragment_playlist.xml
+++ b/app/src/main/res/layout/adapter_fragment_playlist.xml
@@ -11,7 +11,7 @@
         android:id="@+id/imageView"
         android:layout_width="@dimen/_40sdp"
         android:layout_height="@dimen/_40sdp"
-        android:src="@drawable/icv_playlist_songs" />
+        android:src="@drawable/icv_songs" />
 
     <LinearLayout
         android:layout_width="0dp"
