--- a/app/src/main/res/layout/adapter_songs_delete.xml
+++ b/app/src/main/res/layout/adapter_songs_delete.xml
@@ -19,8 +19,7 @@
         android:id="@+id/imageView"
         android:layout_width="@dimen/_40sdp"
         android:layout_height="@dimen/_40sdp"
-        android:layout_marginLeft="@dimen/_5sdp"
-        android:src="@drawable/icv_songs" />
+        android:layout_marginLeft="@dimen/_5sdp" />
 
     <LinearLayout
         android:layout_width="0dp"
