--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
 
+    <style name="MaterialButton" parent="Theme.MaterialComponents">
+        <item name="colorOnPrimary">@android:color/white</item>
+        <item name="colorPrimary">#FD2222</item>
+        <item name="colorOnSurface">#FD2222</item>
+    </style>
+
     <style name="MySeekBar" parent="Widget.AppCompat.SeekBar">
         <item name="android:progressBackgroundTint">@color/txt_white35</item>
         <item name="android:progressTint">@color/offwhite</item>
